--- a/templates/user_nutrition/index.html.twig
+++ b/templates/user_nutrition/index.html.twig
@@ -95,6 +95,8 @@
                     <a href="{{ path('app_user_nutrition_edit', {'user': user_nutrition.user.getIdu()}) }}" class="btn-secondary btn">Edit</a>
                     <a href="{{ path('app_generate_pdf', {'userId': user_nutrition.user.getIdu()}) }}" class="btn btn-secondary">Generate your bilan</a>
                       <a href="{{ path('meal_plan') }}?calorie={{ user_nutrition.calorie }}" class="btn btn-secondary">Meal Plan</a>
+                      <a href="{{ path('chat') }}" class="btn btn-secondary">Chat</a>
+
 
 
                 </td>
